fix overlapping text

--- a/css/master.styl
+++ b/css/master.styl
@@ -36,7 +36,6 @@ githubColor = #000000
 	box-sizing border-box
 
 html, body, .container
-	position relative
 	width 100%
 	height 100%
 
